--- a/index.html
+++ b/index.html
@@ -31,43 +31,43 @@
 <body>
     <ol>
         <li>
-            <a href="/page_1.html">Ex. 1</a>
+            <a href="HTML/page_1.html">Ex. 1</a>
         </li>
         <li>
-            <a href="/page_2.html">Ex. 2</a>
+            <a href="./page_2.html">Ex. 2</a>
         </li>
         <li>
-            <a href="/page_3.html">Ex. 3</a>
+            <a href="./page_3.html">Ex. 3</a>
         </li>
         <li>
-            <a href="/page_4.html">Ex. 4</a>
+            <a href="./page_4.html">Ex. 4</a>
         </li>
         <li>
-            <a href="/page_5.html">Ex. 5</a>
+            <a href="./page_5.html">Ex. 5</a>
         </li>
         <li>
-            <a href="/page_6.html">Ex. 6</a>
+            <a href="./page_6.html">Ex. 6</a>
         </li>
         <li>
-            <a href="/page_7.html">Ex. 7</a>
+            <a href="./page_7.html">Ex. 7</a>
         </li>
         <li>
-            <a href="/page_8.html">Ex. 8</a>
+            <a href="./page_8.html">Ex. 8</a>
         </li>
         <li>
-            <a href="/page_9.html">Ex. 9</a>
+            <a href="./page_9.html">Ex. 9</a>
         </li>
         <li>
-            <a href="/page_10.html">Ex. 10</a>
+            <a href="./page_10.html">Ex. 10</a>
         </li>
         <li>
-            <a href="/page_11.html">Ex. 11</a>
+            <a href="./page_11.html">Ex. 11</a>
         </li>
         <li>
-            <a href="/page_12.html">Ex. 12</a>
+            <a href="./page_12.html">Ex. 12</a>
         </li>
         <li>
-            <a href="test.html">test</a>
+            <a href="./test.html">test</a>
     </ol>
 
 </body>
