--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
     <ol>
         <li>
-            <a href="HTML/page_1.html">Ex. 1</a>
+            <a href="./page_1.html">Ex. 1</a>
         </li>
         <li>
             <a href="./page_2.html">Ex. 2</a>
