--- a/page_11.html
+++ b/page_11.html
@@ -35,6 +35,9 @@
         .menu-item:hover {
             background-color: #5f5f5f;
         }
+        div {
+            width: 90%;
+        }
     </style>
 </head>
 <body>
@@ -53,6 +56,12 @@
         <div>Artificial Intelligence (AI) has emerged as one of the most transformative technologies of the 21st century. From virtual assistants to self-driving cars, AI is reshaping industries, economies, and daily life. While it offers immense benefits, it also raises ethical, economic, and social questions. This article explores the multifaceted impact of AI on society.</div>
         <h2>The Rise of Artificial Intelligence</h2>
         <div>AI has evolved rapidly since its inception in the mid-20th century. Early developments focused on rule-based systems, but the advent of machine learning and deep learning has enabled AI to perform complex tasks like image recognition, natural language processing, and predictive analytics. Today, AI powers everything from search engines to medical diagnostics, making it an indispensable part of modern technology.</div>
+        <h1>The Impact of Artificial Intelligence on Modern Society</h1>
+        <h2>Introduction</h2>
+        <div>Artificial Intelligence (AI) has emerged as one of the most transformative technologies of the 21st century. From virtual assistants to self-driving cars, AI is reshaping industries, economies, and daily life. While it offers immense benefits, it also raises ethical, economic, and social questions. This article explores the multifaceted impact of AI on society.</div>
+        <h2>The Rise of Artificial Intelligence</h2>
+        <div>AI has evolved rapidly since its inception in the mid-20th century. Early developments focused on rule-based systems, but the advent of machine learning and deep learning has enabled AI to perform complex tasks like image recognition, natural language processing, and predictive analytics. Today, AI powers everything from search engines to medical diagnostics, making it an indispensable part of modern technology.</div>
+    
     </div>
 </body>
 </html>
